--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cabbages"
-author: "Put your name here!"
-date: "put the date here"
+author: "Andrew Valles Tovar"
+date: "2/2/23"
 output:
   html_document:
     df_print: paged
