--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -34,7 +34,12 @@ veggy <- cabbages
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+```{r}
+boxplot(VitC~Cult,data=veggy)
+```
 
+According to the box plot, C52 contains more vitamin C than C39. We are able to determine this by seeing that the C52 box on the box plot is placed higher than the C39 box.
+  
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
