--- a/Cabbages.rmd
+++ b/Cabbages.rmd
@@ -43,7 +43,12 @@ According to the box plot, C52 contains more vitamin C than C39. We are able to 
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+```{r}
+favstats(VitC~Cult,data=veggy)
+```
 
+The mean of C52, 64.4, is substantially higher than C39. Also, C52 prevails in other categories such as Q1, median, Q3, and others as well. C39 does not go above any category than C52 in this data.
+  
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
